Notification on a click feature

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 class="title">Counter</h1> 
         <p id="counter">0</p>
         <p class="footer">click on the number to increase the number!</p>
+        <button id="notif-btn">Click on me to get a notification!</button>
     </div>
 
     <script src="./app.js"></script>
