Notification on count change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <h1 class="title">Counter</h1> 
         <p id="counter">0</p>
-        <p class="footer">click on the number to increase the number!</p>
+        <p class="footer">click on the number and get to 10 and 20 to see the notifications!</p>
+        <p>OR</p>
         <button id="notif-btn">Click on me to get a notification!</button>
     </div>
 
